<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto">

    <item android:id="@+id/menu_refresh"
          android:title="@string/refresh"
          android:icon="@drawable/ic_refresh_white_24dp"
          app:showAsAction="always"
          tools:ignore="AppCompatResource" />

    <item android:id="@+id/menu_go_to_page"
          android:title="@string/page"
          android:icon="@drawable/ic_open_in_browser_white_24dp"
          app:showAsAction="always"
          tools:ignore="AppCompatResource" />

    <item android:id="@+id/menu_unsubscribe"
          android:title="@string/unsubscribe"
          android:icon="@drawable/ic_delete_black_24dp"
          app:showAsAction="ifRoom"
          tools:ignore="AppCompatResource" />

    <item android:id="@+id/menu_configurate"
          android:title="@string/configurate"
          android:icon="@drawable/ic_mode_edit_black_24dp"
          app:showAsAction="ifRoom"
          tools:ignore="AppCompatResource" />

</menu>