<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingTop="8dp"
    android:paddingBottom="8dp">

    <!-- header -->
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="8dp">

        <TextView
            android:id="@+id/tv_action_title"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="10"
            android:textStyle="bold"
            android:textSize="16sp"/>

        <TextView
            android:id="@+id/tv_action_parse_type"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            android:gravity="right"
            android:textColor="@color/primary"/>

        <TextView
            android:id="@+id/tv_action_method"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            android:gravity="right"
            android:textColor="@color/primary"/>

    </LinearLayout>

    <!-- url -->
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:text="@string/url"/>

        <TextView
            android:id="@+id/tv_action_url"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="7"
            android:ellipsize="end"
            android:maxLines="1"/>

    </LinearLayout>

    <!-- parse expression -->
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="4dp">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:text="@string/expression"/>

        <TextView
            android:id="@+id/tv_action_expression"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="7" />
    </LinearLayout>

    <!-- display expression -->
    <LinearLayout
        android:id="@+id/ll_display_expression"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="4dp">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:text="@string/display_expression"/>

        <TextView
            android:id="@+id/tv_display_expression"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="7" />
    </LinearLayout>

    <!-- all action params are inflated here -->
    <LinearLayout
        android:id="@+id/ll_action_params"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

</LinearLayout>